@@ -41,3 +41,7 @@ define("_AM_CMS_START_YES", "はい");
 define("_AM_CMS_START_NO", "いいえ");
 define("_AM_CMS_START_ALL_CMS", "-- すべてのタグ --");
 define("_AM_CMS_START_FILTER_BY_TAG", "タグによるフィルタリング");
+
+// Categories
+define("_AM_CMS_START_ALL_CATEGORIES", "-- All Categories --");
+define("_AM_CMS_START_FILTER_BY_CATEGORY", "Filter by category");
