@@ -6,6 +6,7 @@ ADDED:
 - Frontend: Actionicons within the detailpage to edit and delete a content
 - Minor adjustments to ensure compatibility with Sprockets 2.0 for the future
 - Japanese language files (not finished)
+- Added the categories into the form from sprockets (thank you to @Madfish)
 
 FIXED:
 - Fix slow page loading index page problem in file "cms/admin/index.php"
